2006-11-28  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/driver.c:
	* doc/src/ns_writer.man:
	* contrib/examples/writer.tcl: Updated ns_writer command to 
	support submitfile which was broken. Aed additional arguments to 
	make it flexible in returning parts of file via wruter thread. Added
	example of ns_writer usage.

2006-11-27  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/tcljob.c:
	* doc/src/ns_job.man: Added -head parameter to ns_job queue
	which if given places new job to the beginning of the queue. By 
	default all new jobs are added to the end.

2006-11-17  Bernd Eidenschink  <eide@users.sf.net>

	* nsd/mimetypes.c: Added recommended MIME types for OpenDocument documents.

2006-11-16  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/tcltime.c: Remove excessive check for shared object when
	converting internal rep of time type.

2006-11-14  Vlad Seryakov  <seryakov@users.sf.net>

	* tcl/sendmail.tcl: Fixed the bug or weird behaviour when sending big 
	attachments, because socket is nonblocking sending big chunk in one puts
	does not work, so need to do split and send line by line

2006-11-14  Stephen Deasey  <sdeasey@users.sf.net>

	* doc/src/man3/Ns_Sls.man: Document the C API for SLS data. Tcl
	doctools is hurting...

2006-11-12  Stephen Deasey  <sdeasey@users.sf.net>

	* Makefile:
	* include/Makefile.module.in: Don't clobber editor backup files.

	* configure.in:
	* nsd/sls.c:
	* nsd/tcltime.c:
	* nsd/unix.c: Quiten some compiler alias warnings, including some
	ugly casts in tcltime.c.

	* configure.in:
	* nsd/info.c:
	* nsthread/nsthreadtest.c: Check for presence of Tcl_GetMemoryInfo
	in Tcl library. This isn't exported when Tcl is built with the
	custom memory allocator dissabled.

	* include/ns.h:
	* nsd/nsd.h
	* nsd/sls.c:
	* nsd/tclcmds.c:
	* nsd/driver.c:
	* nsd/init.c:
	* nsd/Makefile:
	* doc/src/mann/ns_sls.man:
	* tests/ns_sls.test: Add Ns_Sls* and ns_sls commands supporting
	socket-local-storage (data which persists for the lifetime of an