@@ -2866,8 +2866,8 @@ WriterThread(void *arg)
 static void
 SockWriterRelease(WriterSock *wrSockPtr, int reason, int err)
 {
-    Ns_Log(Notice, "Writer: closed sock=%d, fd=%d, error=%d/%d, sent=%u, flags=%X",
-           wrSockPtr->sockPtr->sock, wrSockPtr->fd, reason, err, wrSockPtr->nsent, wrSockPtr->flags);
+    Ns_Log(Notice, "Writer: closed sock=%d, fd=%d, error=%d/%d, sent=%.0f, flags=%X",
+           wrSockPtr->sockPtr->sock, wrSockPtr->fd, reason, err, (double)wrSockPtr->nsent, wrSockPtr->flags);
     SockRelease(wrSockPtr->sockPtr, reason, err);
     if (wrSockPtr->fd > -1) {
         close(wrSockPtr->fd);
@@ -2878,7 +2878,7 @@ SockWriterRelease(WriterSock *wrSockPtr, int reason, int err)
 }
 
 int
-NsWriterQueue(Ns_Conn *conn, int nsend, Tcl_Channel chan, FILE *fp, int fd,
+NsWriterQueue(Ns_Conn *conn, Tcl_WideInt nsend, Tcl_Channel chan, FILE *fp, int fd,
               const char *data)
 {
     Conn          *connPtr = (Conn*)conn;
@@ -2957,8 +2957,8 @@ NsWriterQueue(Ns_Conn *conn, int nsend, Tcl_Channel chan, FILE *fp, int fd,
     wrPtr->curPtr = wrPtr->curPtr->nextPtr;
     Ns_MutexUnlock(&wrPtr->lock);
 
-    Ns_Log(Notice, "Writer: %d: started sock=%d, fd=%d: size=%u, flags=%X: %s",
-           queuePtr->id, wrSockPtr->sockPtr->sock, wrSockPtr->fd, nsend, wrSockPtr->flags, connPtr->reqPtr->request->url);
+    Ns_Log(Notice, "Writer: %d: started sock=%d, fd=%d: size=%.0f, flags=%X: %s",
+           queuePtr->id, wrSockPtr->sockPtr->sock, wrSockPtr->fd, (double)nsend, wrSockPtr->flags, connPtr->reqPtr->request->url);
 
     /*
      * Now add new writer socket to the writer thread's queue
@@ -3118,9 +3118,9 @@ NsTclWriterObjCmd(ClientData arg, Tcl_Interp *interp, int objc,
                 Ns_MutexLock(&queuePtr->lock);
                 wrSockPtr = queuePtr->curPtr;
                 while (wrSockPtr != NULL) {
-                    Ns_DStringPrintf(&ds, "%s %s %d %u %u ", drvPtr->name,
+                    Ns_DStringPrintf(&ds, "%s %s %d %.0f %.0f ", drvPtr->name,
                                      ns_inet_ntoa(wrSockPtr->sockPtr->sa.sin_addr),
-                                     wrSockPtr->fd, wrSockPtr->size, wrSockPtr->nsent);
+                                     wrSockPtr->fd, (double)wrSockPtr->size, (double)wrSockPtr->nsent);
                     wrSockPtr = wrSockPtr->nextPtr;
                 }
                 Ns_MutexUnlock(&queuePtr->lock);
